tests/lean/autoBoundImplicits2.lean.expected.out
autoBoundImplicits2.lean:9:0: error: invalid auto implicit argument 'b', it depends on explicitly provided argument 'n'
